--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,5 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
 # https://dashboard.stripe.com/test/webhooks/we_1Ovp7nJ6ZZDiOBJkGERG0NZM
 # Este es el Signing secret del webhook
 STRIPE_ENDPOINT_SECRET=
+
+NATS_SERVERS="nats://localhost:4222"
